[package]
name = "awesome-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.33"
clap = { version = "4.5.19", features = ["derive"] }
futures = "0.3.30"
gitlab = "0.1611.1"
handlebars = "5.1.0"
octocrab = "0.33.3"
pin-project = "1.1.6"
prettytable-rs = "0.10.0"
reqwest = "0.12.8"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.128"
serde_with = { version = "3.5.1", features = ["chrono_0_4"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8.8"
url = "2.5.0"
