[package]
name = "awesome-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
gitlab = "0.1708.1"
handlebars = "6.3"
octocrab = "0.43"
pin-project = "1.1"
prettytable-rs = "0.10"
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3.12", features = ["chrono_0_4"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
url = "2.5"
